Implement chara page with icons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,18 @@
             <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/">Open source</a>
           </li>    
         </ul>
-
+        <h3 class="section__header">Catalogs</h3>
+        <ul>
+          <li>
+            <a href="/charas/#heroes">Heroes</a>
+          </li>
+          <li>
+            <a href="/charas/#sidekicks">Sidekicks</a>
+          </li>
+          <li>
+            <a href="/charas/#unreleased">Unreleased units</a>
+          </li>
+        </ul>
         <h3 class="section__header">Basic Information</h3>
         <ul>
           <li>
@@ -73,12 +84,6 @@
           </li>
           <li>
             <a href="/guide/mission/">Mission</a>
-          </li>
-        </ul>
-        <h3 class="section__header">Catalogs</h3>
-        <ul>
-          <li>
-            <a href="/charas/">Characters</a>
           </li>
         </ul>
         <h3 class="section__header">Tools</h3>
