--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -96,7 +96,7 @@
         {% endfor %}
     </table>
 </div>
-<!--{% for cardInfo in cardInfos %}
+{% comment %}{% for cardInfo in cardInfos %}
 <div class="hero{{ cardInfo.rarity }}">
     <h3>{{ cardInfo.rarity }} ☆</h3>
     <table>
@@ -112,7 +112,7 @@
         {% endfor %}
     </table>
 </div>
-{% endfor %}-->
+{% endfor %}{% endcomment %}
 
 <h2>Skills</h2>
 
