--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -76,9 +76,9 @@ Change skill view cost by {{ effect.parameter.value }} for {{ target }}
 {% when "IgnoreElement" %}
 Make {{ target }} ignore element advantages
 {% when "NowViewDamage" %}
-Deal {{ effect.parameter.value }}% -> {{ effect.parameter.value | times:2 }}% of damage to {{ target }} as remaining Views go from 0 to ~100000
+Deal {{ effect.parameter.value }}% -> {{ effect.parameter.value | times:2 }}% of damage to {{ target }} as remaining Views go from 0 to {{ effect.parameter.viewMult | times:10000 }}
 {% when "SpdDeferenceDamage" %}
-Deal {{ effect.parameter.value }}% of damage to {{ target }} + extra {{ effect.parameter.spdMult | times:0.18 }}% damage for each point of advantage in speed with target
+Deal {{ effect.parameter.value }}% of damage to {{ target }} + extra {{ effect.parameter.value | divided_by: 1000.0 | times:effect.parameter.spdMult | times:2 }}% damage for each point of advantage in speed with target
 {% when "StatusNumDamage" %}
 Deal {{ effect.parameter.value }}% of damage to {{ target }} and {{ effect.parameter.statusMult }}% extra for each {{ target }}'s {% if effect.parameter.isGoodStatus == true %}buff{% else %}debuff{% endif %}
 {% when "SalesBonusCheat" %}
