--- a/assets/main.scss
+++ b/assets/main.scss
@@ -423,3 +423,9 @@ $elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
 .sidekick-4 {
   background-image: url(/assets/img/icon/ui_frame_s_base_02.png);
 }
+.item {
+  text-decoration: dotted;
+}
+.item img {
+  height: 0.8em;
+}
