Fix sidekick icon excess mask

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -414,6 +414,9 @@ $elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
   background-image: url(/assets/img/icon/ui_frame_h_04.png);
 }
 .sidekick-icon img {
+  display: block;
+  height: 125px;
+  margin: auto;
   -webkit-mask-image: url(/assets/img/icon/ui_frame_s_base_mask.png);
   mask-image: url(/assets/img/icon/ui_frame_s_base_mask.png);
 }
