--- a/_includes/shop-table.html
+++ b/_includes/shop-table.html
@@ -1,4 +1,4 @@
-{% assign shopData = site.data.ShopMaster[id] %}
+{% assign shopData = site.data.ShopMaster.stores[id] %}
 <h2>{{ shopData.storeName }}</h2>
 <table>
   <tr>
