Added a special case for infinite items

--- a/_includes/shop-table.html
+++ b/_includes/shop-table.html
@@ -11,8 +11,8 @@
   <tr>
     <td>{% include item.html id=product.objectId %} x{{ product.objectValue }}</td>
     <td>{% include item.html id=currency.objectId %} x{{ currency.objectValue }}</td>
-    <td>{{ productData.exchangeLimit }}</td>
-    <td>{{ currency.objectValue | times: productData.exchangeLimit }}</td>
+    <td>{% if productData.exchangeLimit == 0 %}Infinite{% else %}{{ productData.exchangeLimit }}{% endif %}</td>
+    <td>{% if productData.exchangeLimit == 0 %}-{% else %}{{ currency.objectValue | times: productData.exchangeLimit }}{% endif %}</td>
   </tr>
   {% endfor %}
 </table>
