--- a/assets/main.scss
+++ b/assets/main.scss
@@ -432,3 +432,12 @@ $elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
 .item img {
   height: 0.8em;
 }
+// Event page
+.event-infobox {
+  border: 2px solid $colorDark
+}
+.event-infobox th {
+  background-color: $colorDark;
+  color: #fff;
+  text-align: center;
+}
