--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="page-header">
-<h1><a href="{{ page.url }}">Event Quest: {{ page.title | defualt: page.jp_title }}</a></h1>
+<h1><a href="{{ page.url }}">Event Quest: {{ page.title | default: page.jp_title }}</a></h1>
 </div>
 
 <table class="event-infobox">
