--- a/assets/main.scss
+++ b/assets/main.scss
@@ -434,7 +434,7 @@ $elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
 }
 // Event page
 .event-infobox {
-  border: 2px solid $colorDark
+  border: 2px solid $colorDark;
 }
 .event-infobox th {
   background-color: $colorDark;
