--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -42,27 +42,27 @@
 
 {% assign detail_prefix = firstCardInfo.resourceName | upcase | prepend: "DETAIL_" %}
 {% assign bio_h01 = detail_prefix | append: "_H01" %}
-<button class="accordion-button">Personal Data 1</button>
-<div class="accordion-panel">
+<details>
+<summary>Personal Data 1</summary>
 <p>{{ site.data.processed.jp_bio[bio_h01] }}</p>
-</div>
+</details>
 {% if include.BIO_H01 %}
-<button class="accordion-button">Personal Data 1 (Translated)</button>
-<div class="accordion-panel">
+<details>
+<summary>Personal Data 1 (Translated)</summary>
 <p>{{ include.BIO_H01 }}</p>
-</div>
+</details>
 {% endif %}
 
 {% assign bio_h02 = detail_prefix | append: "_H02" %}
-<button class="accordion-button">Personal Data 2</button>
-<div class="accordion-panel">
+<details>
+<summary>Personal Data 2</summary>
 <p>{{ site.data.processed.jp_bio[bio_h02] }}</p>
-</div>
+</details>
 {% if include.BIO_H02 %}
-<button class="accordion-button">Personal Data 2 (Translated)</button>
-<div class="accordion-panel">
+<details>
+<summary>Personal Data 2 (Translated)</summary>
 <p>{{ include.BIO_H02 }}</p>
-</div>
+</details>
 {% endif %}
 
 
