--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -40,15 +40,15 @@
 
 {% assign detail_prefix = firstCardInfo.resourceName | upcase | prepend: "DETAIL_" %}
 {% assign bio_s01 = detail_prefix | append: "_S01" %}
-<button class="accordion-button">Personal Data</button>
-<div class="accordion-panel">
+<details>
+<summary>Personal Data</summary>
 <p>{{ site.data.processed.jp_bio[bio_s01] }}</p>
-</div>
+</details>
 {% if include.BIO_S01 %}
-<button class="accordion-button">Personal Data (Translated)</button>
-<div class="accordion-panel">
+<details>
+<summary>Personal Data (Translated)</summary>
 <p>{{ include.BIO_S01 }}</p>
-</div>
+</details>
 {% endif %}
 
 
