--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer class="content__area">
   <nav class="content">
-    Powered by <a href="http://jekyllrb.com/">Jekyll</a>
+    <p>Content is available under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike</a> unless otherwise noted.
+      Live A Hero content and materials are trademarks and copyrights of LifeWonders Inc. or its licensors. All rights reserved.</p>
+    <p>Powered by <a href="http://jekyllrb.com/">Jekyll</a></p>
   </nav>
 </footer>
 <script async src="/assets/main.js"></script>
