--- a/assets/main.scss
+++ b/assets/main.scss
@@ -104,7 +104,8 @@ a:hover {
   float: right;
 }
 .content__area {
-  width: 100%
+  width: 100%;
+  padding-bottom: 40px;
 }
 .content {
   max-width: 800px;
@@ -256,9 +257,10 @@ hr {
 }
 footer {
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   background-color: $colorDark;
-  padding: 40px 0;
+  padding-top: 30px !important;
+  padding-bottom: 15px !important;
 }
 footer a {
   color: #fff;
