--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -5,7 +5,7 @@
 {% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_h"{% endcapture %}
 {% assign artworks = site.static_files | where: "fg", true | where_exp: "item", artwork_cond | map: "path" %}
 
-<div class="element{{ firstCardInfo.element }}">
+<div id="h{{ include.stockId }}" class="element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
         <div class="header">
             <div class="name">{{ page.name }}</div>
