--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -78,7 +78,7 @@ Make {{ target }} ignore element advantages
 {% when "NowViewDamage" %}
 Deal {{ effect.parameter.value }}% -> {{ effect.parameter.value | times:2 }}% of damage to {{ target }} as remaining Views go from 0 to {{ effect.parameter.viewMult | times:10000 }}
 {% when "SpdDeferenceDamage" %}
-Deal {{ effect.parameter.value }}% of damage to {{ target }} + extra {{ effect.parameter.value | divided_by: 1000.0 | times:effect.parameter.spdMult | times:2 }}% damage for each absolute speed difference point with {{ target }}
+Deal {{ effect.parameter.value }}% of damage to {{ target }} + extra {{ effect.parameter.value | divided_by: 1000.0 | times:effect.parameter.spdMult | times:2 }}% damage for each point in speed difference with target
 {% when "StatusNumDamage" %}
 Deal {{ effect.parameter.value }}% of damage to {{ target }} and {{ effect.parameter.statusMult }}% extra for each {{ target }}'s {% if effect.parameter.isGoodStatus == true %}buff{% else %}debuff{% endif %}
 {% when "SalesBonusCheat" %}
