--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -11,7 +11,8 @@ layout: default
 <tr><th colspan="2">Duration</th></tr>
 <tr><th>Gacha</th><td>{{ page.event_start_time | date: site.date_format }} to {{ page.event_end_time | date: site.date_format }}</td></tr>
 <tr><th>Main Quests</th><td>{{ page.event_start_time | date: site.date_format }} to {{ page.event_end_time | date: site.date_format }}</td></tr>
-<!-- free quests, item exchange -->
+<tr><th>Free Quests</th><td>{{ page.farm_start_time | date: site.date_format }} to {{ page.farm_end_time | date: site.date_format }}</td></tr>
+<tr><th>Event Sales</th><td>{{ page.sales_start_time | date: site.date_format }} to {{ page.sales_end_time | date: site.date_format }}</td></tr>
 <tr><td colspan="2"><a href="{{ page.news_link }}">News link</a></td></tr>
 </table>
 
