Add missing css style

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -297,6 +297,9 @@ figcaption {
   padding: 10px 30px 30px;
   margin-bottom: 30px;
 }
+.expired {
+  text-decoration: line-through;
+}
 // Hero page
 .heroBox {
   display: inline-block;
