Add extra furlong and player voice text

--- a/_includes/voice-table.html
+++ b/_includes/voice-table.html
@@ -1,12 +1,20 @@
 {% assign whitelist = "APPRECIATION,DAILY,HERO,PLAYER,RELATION,TOUCH,TRAIN,TRAINED" | split: "," %}
-{% assign name = include.resourceName | upcase | prepend: "_" | append: "_" %}
+{% assign names = include.resourceName | split: "," %}
 
 <h2>Voice Lines</h2>
 <table>
-{% for part in whitelist %}
-{% assign key = "SERIF" | append: name | append: part %}
-{% assign jp_line = site.data.processed.jp_serif[key] %}
-{% assign translated = include[part] %}
-<tr><th>{{ part }}</th><td class="translate" data-translate="{% if translated %}{{ jp_line | escape }}{% endif %}">{{ translated | default: jp_line }}</td></tr>
+{% for n in names %}
+  {% assign name = n | upcase | prepend: "_" | append: "_" %}
+  {% for part in whitelist %}
+    {% assign p = part %}
+    {% assign key = "SERIF" | append: name | append: part %}
+    {% assign jp_line = site.data.processed.jp_serif[key] %}
+    {% if name contains "PLAYER" %}
+      {% if part != "TRAINED" %}{% continue %}{% endif %}
+      {% assign p = key | replace: "SERIF_", "" %}
+    {% endif %}
+    {% assign translated = include[p] %}
+    <tr><th>{{ p }}</th><td class="translate" data-translate="{% if translated %}{{ jp_line | escape }}{% endif %}">{{ translated | default: jp_line }}</td></tr>
+  {% endfor %}
 {% endfor %}
 </table>
