--- a/assets/main.scss
+++ b/assets/main.scss
@@ -360,7 +360,8 @@ $elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
 }
 // Chara list page
 .card-list {
-  padding: 10px;
+  padding: 0;
+  margin: 10px 0;
 }
 .card-list li {
   display: block;
