Add more contributing guide

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,7 +96,13 @@
         <h3 class="section__header">Contributing</h3>
         <ul>
           <li>
-            <a href="/contributing/">Contributing Guide</a>
+            <a href="/contributing/">How to contribute</a>
+          </li>
+          <li>
+            <a href="/contributing/writing/">Writing Guide</a>
+          </li>
+          <li>
+            <a href="/contributing/programming/">Programming Guide</a>
           </li>
         </ul>
       </div>
