Add "Live A Hero Wiki" to page title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{ page.title }}</title>
+  <title>{{ page.title }}{% if page.url != "/" %} - Live A Hero Wiki{% endif %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
