name -> title renaming

--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -8,7 +8,7 @@
 <div id="h{{ include.stockId }}" class="element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ page.name }}</div>
+            <div class="name">{{ page.title }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
         {% include hero-infobox-gallery.html artworks=artworks %}
