--- a/_includes/hero-infobox-unreleased.html
+++ b/_includes/hero-infobox-unreleased.html
@@ -9,7 +9,7 @@ who do not wish to be spoiled about future content.</p>
 <div class="elementNone">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ page.name }}</div>
+            <div class="name">{{ page.title }}</div>
             <div class="sub">{{ page.jp_name }}</div>
         </div>
         {% include hero-infobox-gallery.html artworks=artworks %}
