--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -12,7 +12,7 @@
 <div id="s{{ include.stockId }}" class="elementNone">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ page.name }}</div>
+            <div class="name">{{ page.title }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
         {% include hero-infobox-gallery.html artworks=artworks %}
