Add pointer icon to translate elements [ci skip]

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -300,6 +300,9 @@ figcaption {
 .expired {
   text-decoration: line-through;
 }
+.translate {
+  cursor: pointer;
+}
 // Hero page
 .heroBox {
   display: inline-block;
