--- a/_includes/voice-table.html
+++ b/_includes/voice-table.html
@@ -1,10 +1,19 @@
 {% assign whitelist = "APPRECIATION,DAILY,HERO,PLAYER,RELATION,TOUCH,TRAIN,TRAINED" | split: "," %}
 {% assign names = include.resourceName | split: "," %}
 
+{% assign manual = "battleStart,action,attack,skill,special,smallDamage,bigDamage,win,lose,assist,assisted,loveIndexMax,rankMax,salesStart,salesEnd" | split: "," %}
+{% assign greeting = "h_gachaResult,s_gachaResult" | split: "," %}
+
 <h2>Voice Lines</h2>
 <table>
 {% for n in names %}
   {% assign name = n | upcase | prepend: "_" | append: "_" %}
+
+  {% for part in greeting %}
+  {% assign line = include[part] %}
+  {% if line %}<tr><th>{{ part | replace: "h_", "Hero " | replace: "s_", "Sidekick " }}</th><td>{{ line }}</td></tr>{% endif %}
+  {% endfor %}
+
   {% for part in whitelist %}
     {% assign p = part %}
     {% assign key = "SERIF" | append: name | append: part %}
@@ -15,6 +24,11 @@
     {% endif %}
     {% assign translated = include[p] %}
     <tr><th>{{ p }}</th><td class="translate" data-translate="{% if translated %}{{ jp_line | escape }}{% endif %}">{{ translated | default: jp_line }}</td></tr>
+  {% endfor %}
+
+  {% for part in manual %}
+  {% assign line = include[part] %}
+  {% if line %}<tr><th>{{ part }}</th><td>{{ line }}</td></tr>{% endif %}
   {% endfor %}
 {% endfor %}
 </table>
