Add Google Analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,5 +6,6 @@
   </nav>
 </footer>
 <script async src="/assets/main.js"></script>
+<script async src="/assets/analytics.js"></script>
 </body>
 </html>
