--- a/assets/main.scss
+++ b/assets/main.scss
@@ -364,6 +364,9 @@ $elementColor: #f07d75, #4e8ddf, #5fcb58, #ffb251, #9c76db;
     border: 2px solid $colorGrey;
   }
 }
+.voice-table p {
+  margin-bottom: 0;
+}
 // Chara list page
 .card-list {
   padding: 0;
