More info for gacha

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -251,6 +251,11 @@ th {
   position: sticky;
   top: 0;
 }
+.bordered {
+  th, td {
+    border: 1px solid #000;
+  }
+}
 hr {
   display: block;
   height: 1px;
