--- a/assets/main.scss
+++ b/assets/main.scss
@@ -453,7 +453,8 @@ $elementName: fire, water, earth, light, shadow;
   text-decoration: dotted;
 }
 .item img {
-  height: 0.8em;
+  height: 2em;
+  vertical-align: middle;
 }
 // Event page
 .event-infobox {
