--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
         <h3 class="section__header">Basic Information</h3>
         <ul>
           <li>
-            <a href="/guide/">Gameplay</a>
+            <a href="/guide/">Getting Started</a>
           </li>
           <li>
             <a href="/guide/user_rank/">Stamina and User Rank</a>
