--- a/assets/main.scss
+++ b/assets/main.scss
@@ -449,12 +449,12 @@ $elementName: fire, water, earth, light, shadow;
 .sidekick-4 {
   background-image: url(/assets/img/icon/ui_frame_s_base_02.png);
 }
-.item {
+.item, .status {
   text-decoration: dotted;
-}
-.item img {
-  height: 2em;
-  vertical-align: middle;
+  img {
+    height: 2em;
+    vertical-align: middle;
+  }
 }
 // Event page
 .event-infobox {
