Implement quest infobox

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -468,3 +468,11 @@ $elementName: fire, water, earth, light, shadow;
 .event-infobox th a {
   color: #fff;
 }
+.quest-infobox {
+  th {
+    text-align: center;
+  }
+  .hero-icon {
+    float: left;
+  }
+}
