Adjust quest table width

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -469,8 +469,10 @@ $elementName: fire, water, earth, light, shadow;
   color: #fff;
 }
 .quest-infobox {
+  table-layout: fixed;
   th {
     text-align: center;
+    width: 80px;
   }
   .hero-icon {
     float: left;
