Smaller enemy icon

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -476,5 +476,7 @@ $elementName: fire, water, earth, light, shadow;
   }
   .hero-icon {
     float: left;
+    width: 64px;
+    height: 64px;
   }
 }
