--- a/_includes/quest-infobox.html
+++ b/_includes/quest-infobox.html
@@ -47,7 +47,7 @@
 <tr><th>Rewards</th><td>
 <ul>
 {% for reward in Q.rewards %}
-<li>{% include item.html id=reward.objectId %} x {{ reward.objectValue }} ({{ reward.prob }}%)</li>
+<li>{% include item.html id=reward.objectId %} x {{ reward.objectValue }}</li>
 {% endfor %}
 </ul>
 </td></tr>
