--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -1,13 +1,15 @@
 {% assign cardInfos = site.data.SidekickMaster | where: "stockId", include.stockId %}
 
 {% assign firstCardInfo = cardInfos | first %}
-
-{% if firstCardInfo.resourceName == "player" %}
-{% capture artwork_cond %}item.path contains "fg_player"{% endcapture %}
+{% assign r = firstCardInfo.resourceName %}
+{% if r == "player" %}
+{% capture sprites %}fg_player1_s01,fg_player2_s01,fg_player3_s01,fg_player4_s01{% endcapture %}
 {% else %}
-{% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_s"{% endcapture %}
+{% capture sprites %}fg_{{ r }}_s01{% endcapture %}
 {% endif %}
-{% assign artworks = site.static_files | where: "fg", true | where_exp: "item", artwork_cond | map: "path" %}
+{% if include.extra_sprites %}
+{% assign sprites = sprites | append: "," | append: include.extra_sprites %}
+{% endif %}
 
 <div id="s{{ include.stockId }}" class="elementNone">
     <div class="heroinfobox">
@@ -15,7 +17,7 @@
             <div class="name">{{ page.title }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
-        {% include hero-infobox-gallery.html artworks=artworks %}
+        {% include atlas-gallery.html sprites=sprites %}
         <table>
             <tbody>
                 <tr>
