--- a/assets/main.scss
+++ b/assets/main.scss
@@ -328,8 +328,10 @@ figcaption {
   padding: 0 10px;
 }
 @media (min-width: 1064px) {
-  .hero-gallery img {
+  .hero-gallery, .atlas-gallery {
+    img {
       padding: 0 159px;
+    }
   }
 }
 .heroinfobox {
