Revert "Implement client side atlas stitching"
This reverts commit 13e22b6c61c3107db6349ad275fa7a19971fb132.

--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -1,15 +1,13 @@
 {% assign cardInfos = site.data.SidekickMaster | where: "stockId", include.stockId %}
 
 {% assign firstCardInfo = cardInfos | first %}
-{% assign r = firstCardInfo.resourceName %}
-{% if r == "player" %}
-{% capture sprites %}fg_player1_s01,fg_player2_s01,fg_player3_s01,fg_player4_s01{% endcapture %}
+
+{% if firstCardInfo.resourceName == "player" %}
+{% capture artwork_cond %}item.path contains "fg_player"{% endcapture %}
 {% else %}
-{% capture sprites %}fg_{{ r }}_s01{% endcapture %}
+{% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_s"{% endcapture %}
 {% endif %}
-{% if include.extra_sprites %}
-{% assign sprites = sprites | append: "," | append: include.extra_sprites %}
-{% endif %}
+{% assign artworks = site.static_files | where: "fg", true | where_exp: "item", artwork_cond | map: "path" %}
 
 <div id="s{{ include.stockId }}" class="elementNone">
     <div class="heroinfobox">
@@ -17,7 +15,7 @@
             <div class="name">{{ page.title }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
-        {% include atlas-gallery.html sprites=sprites %}
+        {% include hero-infobox-gallery.html artworks=artworks %}
         <table>
             <tbody>
                 <tr>
