--- a/assets/main.scss
+++ b/assets/main.scss
@@ -328,10 +328,8 @@ figcaption {
   padding: 0 10px;
 }
 @media (min-width: 1064px) {
-  .hero-gallery, .atlas-gallery {
-    img {
+  .hero-gallery img {
       padding: 0 159px;
-    }
   }
 }
 .heroinfobox {
