--- a/_includes/hero-infobox.html
+++ b/_includes/hero-infobox.html
@@ -1,11 +1,9 @@
 {% assign cardInfos = site.data.CardMaster | where: "stockId", include.stockId %}
 
 {% assign firstCardInfo = cardInfos | first %}
-{% assign r = firstCardInfo.resourceName %}
-{% capture sprites %}fg_{{ r }}_h01,fg_{{ r }}_h01_skin1,fg_{{ r }}_h02,fg_{{ r }}_h02_skin1{% endcapture %}
-{% if include.extra_sprites %}
-{% assign sprites = sprites | append: "," | append: include.extra_sprites %}
-{% endif %}
+
+{% capture artwork_cond %}item.path contains "fg_{{ firstCardInfo.resourceName }}_h"{% endcapture %}
+{% assign artworks = site.static_files | where: "fg", true | where_exp: "item", artwork_cond | map: "path" %}
 
 <div id="h{{ include.stockId }}" class="element{{ firstCardInfo.element }}">
     <div class="heroinfobox">
@@ -13,7 +11,7 @@
             <div class="name">{{ page.title }}</div>
             <div class="sub">{{ firstCardInfo.cardName }}</div>
         </div>
-        {% include atlas-gallery.html sprites=sprites %}
+        {% include hero-infobox-gallery.html artworks=artworks %}
         <table>
             <tbody>
                 <tr>
