--- a/assets/main.scss
+++ b/assets/main.scss
@@ -218,6 +218,7 @@ summary {
 }
 img {
   max-width: 100%;
+  height: auto;
 }
 pre {
   padding: 16px;
@@ -326,6 +327,11 @@ figcaption {
 }
 .heroBox .tabs span {
   padding: 0 10px;
+}
+.hero-gallery {
+  img {
+    display: block;
+  }
 }
 @media (min-width: 1064px) {
   .hero-gallery img {
