--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,9 @@
           <li>
             <a href="/charas/#unreleased">Unreleased units</a>
           </li>
+          <li>
+            <a href="/mobs/">Mobs and Enemies</a>
+          </li>
         </ul>
         <h3 class="section__header">Basic Information</h3>
         <ul>
