--- a/_includes/hero-infobox-unreleased.html
+++ b/_includes/hero-infobox-unreleased.html
@@ -1,17 +1,16 @@
-{% capture artwork_cond %}item.path contains "fg_{{ include.resourceName }}"{% endcapture %}
-{% assign artworks = site.static_files | where: "fg", true | where_exp: "item", artwork_cond | map: "path" %}
-
+{% if include.mob != true %}
 <blockquote>
 <p>Unreleased units often contain sprites that are not used in any available quests. Please respect those
 who do not wish to be spoiled about future content.</p>
 </blockquote>
+{% endif %}
 
 <div class="elementNone">
     <div class="heroinfobox">
         <div class="header">
-            <div class="name">{{ page.title }}</div>
-            <div class="sub">{{ page.jp_name }}</div>
+            <div class="name">{{ include.name | default: page.title }}</div>
+            <div class="sub">{{ include.jp_name | default: page.jp_name }}</div>
         </div>
-        {% include hero-infobox-gallery.html artworks=artworks %}
+        {% include atlas-gallery.html sprites=include.sprites %}
     </div>
 </div>
