--- a/_includes/sidekick-infobox.html
+++ b/_includes/sidekick-infobox.html
@@ -46,7 +46,7 @@
 <summary>Side Story</summary>
 <p>{{ site.data.processed.jp_bio[bio_s01] }}</p>
 </details>
-{% if include.BIO_S01 %}
+{% if include.BIO_S01 != "" %}
 <details open>
 <summary>Side Story (Translated)</summary>
 <div markdown="1">
