--- a/_includes/atlas-gallery.html
+++ b/_includes/atlas-gallery.html
@@ -1,3 +1,3 @@
 <div class="atlas-gallery" data-sprites="{{ include.sprites }}">
-<img width="640" height="1024" loading="lazy">
+<img width="640" height="1024">
 </div>
