Shorter note on skill table

--- a/_includes/skill-table.html
+++ b/_includes/skill-table.html
@@ -1,8 +1,4 @@
-<p>Disclaimer: skill effect parsing is still work in progress. The generated English description might
-contain some misinformation. Hover over the effect description to see original japanese description.
-</p>
-
-<p>Please help report any bug related to skill effect <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/7">here</a>.</p>
+<p>Hover over the effect description to see original japanese description. Please help report any bug related to skill effect <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/7">here</a>.</p>
 
 <p>Want to help in translating skill names? Please see <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/issues/26">here</a>.</p>
 
