Implement voice actor and illustrator page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,6 +47,12 @@
           <li>
             <a href="/mobs/">Mobs and Enemies</a>
           </li>
+          <li>
+            <a href="/illustrators/">Illustrators</a>
+          </li>
+          <li>
+            <a href="/voice_actors/">Voice Actors</a>
+          </li>
         </ul>
         <h3 class="section__header">Basic Information</h3>
         <ul>
